apis/parsers/deploy/deploy.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: parsers
  labels:
    app: parsers
    service: parsers
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: parsers
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parsers
  labels:
    app: parsers
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parsers
      version: v1
  template:
    metadata:
      labels:
        app: parsers
        version: v1
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      serviceAccountName: skyhive
      hostAliases:
        - ip: 15.222.74.209
          hostnames:
            - dev-e.skyhive.io
      containers:
        - name: parsers
          image: 596298976885.dkr.ecr.ca-central-1.amazonaws.com/parsers:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parsers
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /parsers/
            pathType: Prefix
            backend:
              service:
                name: parsers
                port:
                  number: 8080
